--- a/code/style.css
+++ b/code/style.css
@@ -4,11 +4,37 @@ red-logo: ab4c49;
 blue-logo: #acbdbe;
 */
 
+
+/*GENERALSTYLING*/
 html {
   background: #6c9395;
   color: #fff;
 }
 
+a {
+  color: white;
+  transition-duration: 0.5s;
+}
+
+a:hover {
+  color: #454241fc;
+}
+
+input:focus,
+textarea {
+  outline: none !important; /*This makes the blue border disappear when the form is active*/
+}
+
+.footer-wrapper {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  font-size: x-small;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+/*HEADER STYLING, mobile first*/
 
 .nav-wrapper {
   border: none;
@@ -18,37 +44,38 @@ html {
   grid-template-columns: repeat(8, 1fr);
 }
 
-.text h1{
-  display:none;
+.text h1 {
+  display: none;
 }
 
-.search-p{
-  display:none;
+.search-p {
+  display: none;
 }
 
-.date-stamp{
+.date-stamp {
   font-size: 12px;
-  color:rgba(238, 238, 229, 0.974);
+  color: rgba(238, 238, 229, 0.974);
   text-align: right;
 }
 
-
-.top{
+.top {
   background-color: #454241fc;
   grid-column: span 2;
 }
 
-.top p{
+.top p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: small;
 }
 
-.logo-image{
+.logo-image {
   max-width: 120px;
   max-height: 120px;
 }
-.top button{
-  background-color: #acbdbe; /* same as background */
+
+.top button {
+  background-color: #acbdbe;
+  /* same as background */
   border: none;
   color: white;
   padding: 2px 2px;
@@ -60,33 +87,28 @@ html {
   height: 40px;
   transition-duration: 0.4s;
   border-radius: 30%;
- 
 }
-  .top button:hover {
-    background-color:#6c9395; 
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: small;
-  }
 
-  .navbar img{
-    max-width: 30px;
-    max-height: 30px;
-    
-  }
+.top button:hover {
+  background-color: #6c9395;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: small;
+}
 
 .top input {
   margin: 2px 10px;
   width: 70px;
   height: 20px;
-  border-radius: 0.5rem;
-  display:none;
+  border-radius: 0.5rem; /*this makes the button appear round*/
+  display: none;
 }
 
-/*This makes the blue border disappear when the form is active*/
-input:focus, textarea {
-  outline: none !important;
-} 
+.navbar img {
+  max-width: 30px;
+  max-height: 30px;
+
+}
 
 .navbar {
   grid-column: span 4;
@@ -95,52 +117,42 @@ input:focus, textarea {
   align-items: end;
 }
 
-a {
 
-  color:white;
-  transition-duration: 0.5s;
-}
-
-a:hover {
-  color:#454241fc;
-}
+/*BIG NEWS STYLIG:PHONE*/
 
 .big-news-section{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-width: auto;
-height: auto; 
-display: flex;
-flex-direction: column;
-align-items: center;
-padding: 10px;
-}
-
-
-.stor-nyhet{
-  width: 400px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: auto;
+  height: auto; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  }
+  
+  .stor-nyhet{
+    width: 400px;
+    height: auto;
+    margin: 5px 0px 2px 0px;
+  }
+  
+  .nyhet-bild img{
+  max-width: 100%;
   height: auto;
-  margin: 5px 0px 2px 0px;
-}
-
-.nyhet-bild img{
-max-width: 100%;
-height: auto;
-
-}
-
-.nyhet-text{
-background-color: #acbdbe;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-font-size: small;
-padding: 6px;
-}
+  
+  }
+  
+  .nyhet-text{
+  background-color: #acbdbe;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: small;
+  padding: 6px;
+  }
 
 
+/*TINY NEWS STYLING:PHONE*/
 
-
-/*Styling for tiny news*/
-
-.tiny-news-wrapper{
+.tiny-news-wrapper {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: rgb(244, 244, 220);
   display: flex;
@@ -149,65 +161,66 @@ padding: 6px;
 }
 
 
-.tiny-news{
+.tiny-news {
   margin: 8px 35px;
   height: 250px;
   width: 400px;
   background: rgba(178, 195, 148, 0.697);
   padding: 8px;
-} 
+}
 
- .tiny-news-image{
+.tiny-news-image {
   width: 100%;
   height: 83%;
-} 
+}
 
-
-
-.tiny-news a{
+.tiny-news a {
   text-decoration: none;
   font-size: small;
 }
 
-.tiny-news a:hover{
+.tiny-news a:hover {
   text-decoration: none;
   font-size: 14px;
   transition-duration: 0.3s;
 }
 
-.extrap{
-  display:none;
+.extrap {
+  display: none;
 }
 
-/*responsiveness Tablets*/
+/*RESPONSIVENESS TABLETS*/
 @media (min-width: 667px) and (max-width: 1024px) {
+
   /*header text*/
-  .text h1{
+  .text h1 {
     font-size: 30px;
     padding: 20px 20px 20px 70px;
-    display:grid;
+    display: grid;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:rgba(220, 221, 213, 0.974);
+    color: rgba(220, 221, 213, 0.974);
   }
 
-  .image{
+  .image {
     grid-column: span 1;
   }
-  
-  .text{
-  grid-column: span 4;
-  
+
+  .text {
+    grid-column: span 4;
+
   }
 
-  .navbar{
+  .navbar {
     grid-column: span 3;
   }
 
-  .search-p{
-    display:none;
+  .search-p {
+    display: none;
   }
 
-  .big-news-section{
+
+  /*BIG NEWS STYLING: TABLET*/
+  .big-news-section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: rgb(244, 244, 220);
     display: flex;
@@ -216,190 +229,184 @@ padding: 6px;
     align-items: center;
     justify-content: center;
     gap: 8px;
-    } 
-  
-  .stor-nyhet{
+  }
+
+  .stor-nyhet {
     max-width: 45%;
-  
-    }
-    
-    
-  .nyhet-bild img{
+
+  }
+
+
+  .nyhet-bild img {
     max-width: 100%;
     height: 300px;
-    
-  }    
-  
-  .nyhet-bild{
-    min-height: 250px;
-    
+
   }
-  .nyhet-text{
+
+  .nyhet-bild {
+    min-height: 250px;
+
+  }
+
+  .nyhet-text {
     min-height: 290px;
   }
 
-.tiny-news-wrapper{
-  display: flex;
-  flex-direction: row;
-  padding: 2px;
-  column-gap: 10px;
-  flex-wrap: wrap;
-  justify-content: center;
+/*TINY NEWS STYLING: TABLET*/
+  .tiny-news-wrapper {
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
+    column-gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  }
+
+  .tiny-news {
+    margin: 5px;
+    max-width: 35%;
+    margin: 9px 2px;
+    padding: 8px;
+  }
+
+  .tiny-news-image {
+    width: 100%;
+    height: 75%;
+  }
+
+  .tiny-news a {
+    font-size: 14px;
+  }
+
+  .tiny-news a:hover {
+    font-size: 16px;
+  }
+
 
 }
-  
-.tiny-news{
-  margin: 5px;
-  max-width: 35%;
-  margin: 9px 2px;
-  padding: 8px;
-}
-
-.tiny-news-image{
-  width: 100%;
-  height: 75%;
-}
-
-.tiny-news a{
-  font-size: 14px;
-}
-
-.tiny-news a:hover{
-  font-size: 16px;
-}
-
-
-}
 
 
 
 
-/*Responsivness Desktop*/
-@media (min-width:1025px){
-  .text h1{
+/*RESPONSIVNESS DESKTOP*/
+@media (min-width:1025px) {
+  .text h1 {
     font-size: 35px;
-    display:grid;
+    display: grid;
     color: rgba(220, 221, 213, 0.974);
     padding: 20px 40px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-  }
-
-.big-news-section{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background: rgb(244, 244, 220);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  } 
-
-.stor-nyhet{
-  min-width: 47%;
-  font-size: 15px;
-
-  }
-  
-  .extrap{
-    display:flex;
-  }
-  
-.nyhet-bild img{
-  max-width: 100%;
-  height: 350px;
-  
-}    
-
-.nyhet-bild{
-  min-height: 350px;
-  max-width: 500px;
-  
-}
-
-.nyhet-text{
-  height: 340px;
-  max-width: 500px;
-}
-
-
-.navbar{
-min-width: 1025px;
-max-width: auto;
-justify-content: right;
-align-items: flex-end;
-grid-column: span 8;
-background-color: #acbdbe;
-}
-
-
-.image{
-  grid-column: span 1;
-}
-
-
-.text{
-grid-column: span 7;
-
-}
-
-.top input{
-display: flex;
-min-width: 300px;
-padding : 7px 2px
-}
-
-.search-p{
-  display:inline;
-}
-
-.navbar-search button{
-  display:none;
-}
-
-
-
-.tiny-news-wrapper{
-  display: flex;
-  flex-direction: row;
-  padding: 2px;
-  column-gap: 8px;
-  flex-wrap: wrap;
-  justify-content: center;
-
-}
-  
-.tiny-news{
-  margin: 5px;
-  max-width: 21%;
-  padding: 7px;
-  display: flex;
-  justify-content: center;
-  flex-wrap:wrap;
-}
-
-.tiny-news-image{
-  width: 100%;
-  height: 60%;
-
-}
-
-.tiny-news a{
-  font-size: medium;
-}
-
-.tiny-news a:hover{
-  font-size: large;
-}
-
-
-}
-
-.footer-wrapper{
-    width: 100%;
-    height: auto; 
-    text-align: center; 
-    font-size: x-small;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
   }
+
+/*HEADER STYLING:DESKTOP*/
+  .navbar {
+    min-width: 1025px;
+    max-width: auto;
+    justify-content: right;
+    align-items: flex-end;
+    grid-column: span 8;
+    background-color: #acbdbe;
+  }
+
+
+  .image {
+    grid-column: span 1;
+  }
+
+
+  .text {
+    grid-column: span 7;
+
+  }
+
+  .top input {
+    display: flex;
+    min-width: 300px;
+    padding: 7px 2px
+  }
+
+  .search-p {
+    display: inline;
+  }
+
+  .navbar-search button {
+    display: none;
+  }
+
+  /*BIG NEWS STYLING:DESKTOP*/
+  .big-news-section {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: rgb(244, 244, 220);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
+
+  .stor-nyhet {
+    min-width: 47%;
+    font-size: 15px;
+
+  }
+
+  .extrap {
+    display: flex;
+  }
+
+  .nyhet-bild img {
+    max-width: 100%;
+    height: 350px;
+
+  }
+
+  .nyhet-bild {
+    min-height: 350px;
+    max-width: 500px;
+
+  }
+
+  .nyhet-text {
+    height: 340px;
+    max-width: 500px;
+  }
+
+/*TINY NEWS STYLING:DESKTOP*/
+  .tiny-news-wrapper {
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
+    column-gap: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  }
+
+  .tiny-news {
+    margin: 5px;
+    max-width: 21%;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .tiny-news-image {
+    width: 100%;
+    height: 60%;
+
+  }
+
+  .tiny-news a {
+    font-size: medium;
+  }
+
+  .tiny-news a:hover {
+    font-size: large;
+  }
+
+}
+
