--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,398 @@
+/*** Main ***/
+
+* {box-sizing: border-box;}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  color: #39607F
+
 }
+
+body {
+  margin: 20px; 
+  font-family:'Lucida Sans';
+  background-color: #91530c60;
+  background-image: linear-gradient(to bottom right, #643c0f98, rgb(255, 255, 255));
+}
+
+h1 {
+  margin: 20px; 
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 70px;
+  transition: all .2s ease-in-out;
+  justify-content: center;
+  align-content: center;
+}
+
+h1:hover {
+transform: scale(1.2);
+color: rgb(173, 25, 45);
+}
+
+a { 
+  color: rgb(158, 24, 24);
+  font-size: 20px;
+  font-family: 'Lucida Sans';
+  margin: 5px;
+  transition: all .2s ease-in-out;
+}
+
+a:hover{ 
+  transform: scale(1.2);
+  color: 39607F
+
+}
+
+h3 {
+  margin: 5px;
+  padding: 5px;
+}
+
+p {
+  margin: 5px;
+}
+
+.banner {
+  width: 300px;
+}
+
+/*** Header and nav ***/
+
+header {
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-bottom: 2px solid rgb(0,0,0, 0.5)
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
+/*** Big news section - first section ***/
+
+.flex-parent {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.flex-child {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 10px;
+  height: 450px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  border: 3px solid rgba(0, 0, 0, 0.616);
+  opacity: 1.0;
+  text-align: center;
+  transition: all .2s ease-in-out;
+}
+
+.flex-child:hover {
+  transform: scale(1.02);
+  -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    transform: scale(1.02);
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+
+
+}
+
+.img {
+  transition: all .2s ease-in-out;
+  display: inline;
+
+
+}
+.img:hover {
+  transform: scale(1.1);
+
+}
+
+.photo-1 {
+  width: 100%;
+}
+
+
+/**** Small news "grid" section***/
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(1, 4fr);
+  grid-gap: 20px;
+  width: 100%;
+  margin: 10px;
+  align-content: center;
+  justify-content: center;
+}
+
+.card {
+  display: flex; 
+  flex-direction: column;
+  width: 100%;
+  border: 3px solid rgba(0, 0, 0, 0.616);
+  color: black;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 30rem;
+  opacity: 1.0;
+  grid-column: span 1;
+}
+
+.link {
+  font-size: 15px; 
+}
+
+.card:hover {
+  opacity: 1.0;
+}
+
+.mario-golf {
+  width: 100%;
+  max-height: 100%;
+  
+}
+
+.saints-row {
+  width: 100%;
+  max-height: auto;
+}
+
+.spiderman {
+  width: 100%;
+  max-height: auto;
+}
+
+.hogwarts {
+  width: 100%;
+  max-height: auto;
+}
+
+/*** Footer styling ***/
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  font-size: 10px;
+}
+
+.github {
+  width: 20px;
+}
+
+/*** Media queries for tablets ***/
+
+@media (min-width: 668px){
+  body{
+    margin: 50px;
+  }
+  
+  .cards { 
+  grid-template-columns: repeat(2, 2fr);
+  }
+
+  .card {
+    height: 25rem;
+    grid-column: span 2;
+  }
+
+  .banner {
+    max-width: 200px;
+  }
+
+  .header { 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-items: space-evenly;
+  }
+
+  .flex-parent {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+   .one { 
+    width: 70%;
+  }
+  
+  
+
+
+  .cards {
+    display: grid; 
+    grid-gap: 20px;
+  }
+
+  .card {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .mario-golf {
+    width: 200px;
+ 
+  }
+
+  .saints-row {
+    width: 200px;
+  }
+
+  .spiderman {
+    width: 200px;
+  }
+
+  .hogwarts {
+    width: 200px;
+  }
+
+/*** Media queries for desktop ***/
+
+@media (min-width: 1025px) {
+    
+  .cards { 
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px;
+    align-items: center;
+  }
+
+  .card { 
+    height: 35rem;
+    grid-column: span 1;
+    text-align: center;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  header {  
+    display: flex;
+    margin: 20px;
+    height: 200px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+   nav {
+      display: flex;
+      flex-direction: row;
+  }
+    
+  .photo-1 {
+      max-width: 700px;
+  }
+
+  .flex-parent {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .flex-child {
+      height: 650px;
+      justify-content: center;
+  }
+    
+  .one {
+      width: 70%;
+  }
+
+
+
+  .mario-golf {
+     width: 90%;
+  } 
+    
+  .saints-row {
+    width: 90%;
+  }  
+  
+  .spiderman {
+    width: 90%;
+  }
+
+  .hogwarts {
+    width: 90%;
+  }
+
+
+  }
+  
+  figure {
+    display: inline-block;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    -webkit-transition: all .20s linear;
+    -moz-transition: all .20s linear;
+    transition: all .20s linear;
+    cursor: pointer;
+    position: relative;
+  }
+
+  figcaption {
+    color: black;
+    font-size: 20px;
+    position: relative;
+    top: 15px;
+  }
+
+  figure img {
+    display: block;
+    width: 250px;
+  }
+
+  figure:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    transform: scale(1.02);
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+  }
