--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,350 @@
-html {
-  background: #0025ff;
+/*
+font-family: 'PT Serif', serif;
+*/
+
+*{
+  box-sizing:
+  border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root{
+  --heading:
+  'PT Serif',
+  serif 
+}
+
+body{
+  margin: 0.5em;
+  line-height: 1,5;
+  font-family:'Courier New', 'serif';
+  background: rgb(255, 255, 255)
+  
+
+}
+/*News Content*/
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  
+ 
+  
+
+}
+
+.big-pic {
+  grid-column: span 8;
+  
+}
+
+.headline{
+  grid-column: 2 / 8;
+ 
+  
+  color: rgb(0, 0, 0);
+  
+  
+}
+
+.headline p {
+display: none;
+  
+}
+
+.content-1{
+  grid-column: span 4;
+  grid-row: 3;
+ 
+  color: rgb(0, 0, 0);
+}
+
+.text-content-1{
+  grid-column: span 4;
+  grid-row: 3;
+  padding: 0.2em;
+}
+
+
+.content-2{
+  grid-column: span 4;
+  grid-row: 4;
+  padding: 0.2em;
+
+}
+
+.text-content-2{
+  grid-column: span 4;
+  grid-row: 4;
+  padding: 0.2em;
+}
+
+.content-3{
+  grid-column: span 4;
+  grid-row: 5;
+}
+
+.text-content-3{
+  grid-column: span 4;
+  grid-row: 5;
+  padding: 0.2em;
+}
+
+.content-4{
+  grid-column: span 4;
+  grid-row: 6;
+
+}
+
+.text-content-4{
+  grid-column: span 4;
+  grid-row: 6;
+  padding: 0.2em;
+}
+
+
+/* layout style */
+
+img{
+  max-width: 100%;
+  margin: 0.2em;
+  
+}
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: #000
+}
+
+hr{
+  width: 95vw;
+  margin: 0 auto;
+}
+
+/* head */
+
+.top-header{
+  display: flex;
+  justify-content: 
+  space-between;
+  align-items: center;
+  margin: 0 auto;
+  background: rgb(240, 153, 39);
+  color: #fff; 
+  padding: 20px 30px;
+}
+
+.top-header{
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.times-btn{
+  display: none;
+}
+
+/* nav-bar */
+
+.nav-bar{
+
+  height: 0;
+  overflow: hidden; 
+  background: #333
+  
+}
+
+.show-nav{
+  height: auto;
+}
+
+.nav-bar ul li{
+text-align: center;
+display: block;
+padding: 15px 0;
+transition: all 1
+ease-in-out
+
+}
+
+.nav-bar ul li:hover{
+  background: rgb(211, 134, 34)
+ 
+}
+
+.nav-bar ul li a{
   color: #fff;
+  text-transform:uppercase; 
+  font-size: 150%;
+}
+
+.nav-bar ul li a:hover{
+  text-decoration: underline
+}
+
+
+
+
+@media(min-width: 668px) {
+  
+  
+  
+  
+  .ham-btn, .times-btn{
+      display: none!important;
+  }
+  .navigation-container{
+      display: flex;
+      background: #333;
+      align-items: center;
+      flex-wrap: wrap;
+  }
+
+  .top-header{
+      flex: 0 0 15%;
+  }
+
+  .nav-bar{
+      flex: 1 0 auto;
+      height: 100%;
+      background: transparent;
+  }
+
+  .nav-bar nav ul{
+      display: flex;
+      justify-content: center;
+  }
+  .nav-bar nav ul li{
+      padding-right: 30px;
+  }
+
+  .nav-bar nav ul li:hover{
+      background: none;
+  }
+  
+  .big-pic{
+      grid-column: 1 / 6;
+      
+  }
+
+  .headline{
+      grid-column: 6 / 9;
+      
+      padding: 1rem;
+  }
+
+  .headline p{
+      display: inline;
+  }
+
+  .content-1{
+      grid-column: 1 / 5;
+      grid-row: 2;
+      
+  
+  }
+
+  .text-content-1{
+      grid-column: 1 / 5;
+      grid-row: 4;
+  }
+
+  .content-2{
+      grid-column: 5 / 9;
+      grid-row: 2;
+  }
+
+  .text-content-2{
+      grid-column: 5 / 9;
+      grid-row: 4;
+  }
+
+  .content-3{
+      grid-column: 1 / 5;
+      grid-row: 5;
+  
+  }
+
+  .text-content-3{
+      grid-column: 1 / 5;
+      grid-row: 6;
+  }
+
+  .content-4{
+      grid-column: 5 / 9;
+      grid-row: 5;
+  
+  }
+
+  .text-content-4{
+      grid-column: 5 / 9;
+      grid-row: 6;
+  }
+
+ 
+}
+@media (min-width: 1025px){
+  
+  .big-pic{
+      grid-column: 1 / 6;
+      
+  }
+
+  .headline{
+      grid-column: 6 / 9;
+      
+      padding: 1rem;
+  }
+
+  .headline p{
+      display: inline;
+  }
+
+  .content-1{
+      grid-column: 1 / 3;
+      grid-row: 2;
+      
+  
+  }
+
+  .text-content-1{
+      grid-column: 1 / 3;
+      grid-row: 3;
+  }
+
+  .content-2{
+      grid-column: 3 / 5;
+      grid-row: 2;
+  }
+
+  .text-content-2{
+      grid-column: 3 / 5;
+      grid-row: 3;
+  }
+
+  .content-3{
+      grid-column: 5 / 7;
+      grid-row: 2;
+  
+  }
+
+  .text-content-3{
+      grid-column: 5 / 7;
+      grid-row: 3;
+  }
+
+  .content-4{
+      grid-column: 7 / 9;
+      grid-row: 2;
+  
+  }
+
+  .text-content-4{
+      grid-column: 7 / 9;
+      grid-row: 3;
+  }
+
 }
