--- a/code/style.css
+++ b/code/style.css
@@ -6,16 +6,17 @@ body {
   font-family: 'DM Sans', sans-serif;
   width: 100%;
   height: 100%;
-  margin-right: 20%;
-  margin-left: 10%;
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
-@media screen and (max-width: 667px)  {
+@media (max-width: 667px)  {
 .navigation { 
   height: 65px;
   width: 100%;
   margin-bottom: 5%;
-  text-align: center;
+  margin-left: 5%;
+  text-align: right;
 }}
 
 @media (min-width: 668px) and (max-width: 1023px) {
@@ -23,7 +24,8 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
-  margin-right: 30%;
+  margin-left: 10%;
+  margin-right: 25%;
   margin-bottom: 2%;
 }}
 
@@ -59,7 +61,7 @@ body {
 .left {
   order: 0;
   display: flex;
-  margin-right: 10%;
+  margin-right: 15%;
 }}
 
 @media (min-width: 668px) and (max-width: 1023px) {
@@ -101,28 +103,32 @@ body {
 .left {
   display: flex;
   float: right;
-  margin-right: 20%;    
+  margin-right: 15%;    
 }}
 
 @media (min-width: 1024px) {
 .right {
   display: flex;
   float: right;
-  margin-right: 20%;    
+  margin-right: 4%;    
 }}
 
 @media (min-width: 1024px) {
 .links-right {
   display: flex;
   flex-flow: row;
-  padding: 2%;
+  margin-top: 10%;
+  margin-left: 2%;
+  font-size: 20px;
 }}
 
 @media (min-width: 1024px) {
 .links-left {
   display: flex;
-  justify-content: center;
-  padding: 2%;
+  justify-content: row;
+  margin-top: 10%;
+  margin-left: 2%;
+  font-size: 20px;
 }}
 
 a:-webkit-any-link {
@@ -138,23 +144,30 @@ a:hover {
 
 .menu {
   padding: 2%;
+  margin-right: 10%;
 }
 
 @media (min-width: 668px) {
 .menu {
   display: none;
 }}
-/*
-@media (min-width: 1024px) {
-.menu {
-  display: none;
-}}
-*/
+
 .content {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-left: 5%;
 }
+
+@media (min-width: 668px) {
+.content {
+  margin-left: 5%;
+}}
+
+@media (min-width: 1024px) {
+.content {
+  margin: 0%;
+}}
 
 .presentation {
   background-color: rgb(131, 106, 75);
@@ -162,55 +175,42 @@ a:hover {
   display: flex;
   align-items: flex-start;  
   flex-direction: column;
-  padding: 20px;
+  padding: 2%;
   width: 100%;
-  margin-right: 20%;
+  margin-right: 10%;
 }
 
 .presentation img {
-  display: flex;
-  justify-content: flex-start;
-  width: 300px;
+  width: 100%;
   height: auto;
   border: solid wheat;
 }
 
 @media (min-width: 668px) {
 .presentation img {
-  width: 660px;
+  width: 100%;
 }}
 
 @media (min-width: 1024px) {
 .presentation img {
-  width: 1020px;
+  width: 100%;
   }}
 
 .presentation-text {
-  width: 300px;
-  height: 250px;
-  padding: 5%;
-  margin-top: 10px;
+  width: 90%;
+  height: auto;
+  padding: 3%;
   position: relative;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
 }
 
-@media (min-width: 668px) {
-.presentation-text {
-  width: 580px;
-  height: 150px;
-}}
-
-@media (min-width: 1024px) {
-.presentation-text {
-  width: 1000px;
-  height: 150px;
-}}
-
 h1 {
   color: aquamarine;
   font-size: 40px;
+  margin-block-start: 0.5em;
+  margin-block-end: 0em;
 }
 
 .presentation p {
@@ -219,7 +219,7 @@ h1 {
 }
 
 .content-area {
-  width: 90%;
+  width: 100%;
   height: auto;
   overflow: auto;
   margin-bottom: 80px;
@@ -227,17 +227,12 @@ h1 {
   flex-direction: row;
   flex-flow: row wrap;
   overflow: auto;
-  margin-right: 20%;
+  margin-right: 10%;
 }
 
 @media (min-width: 668px) {
 .content-area {
-  margin-right: 10%;
-}}
-
-@media (min-width: 1024px) {
-.content-area {
-  margin-right: 20%;
+  margin-left: 5%;
 }}
 
 main {
@@ -245,8 +240,9 @@ main {
 }
 
 .box {
-  margin-bottom: 75px;
-  margin-top: 70px;
+  width: auto;
+  height: 500px;
+  margin-top: 50px;
   margin-right: 2%;
   display: block;
   background-color: bisque;
@@ -264,31 +260,36 @@ main {
 .box {
   display: inline-block;
   vertical-align: top;
+  height: 400px;
   width: 18%;
 }}
 
 .box a {
   color: rgb(84, 181, 179);
-  margin-bottom: 20px;
+  width: 90%;
+  margin-bottom: 10px;
   margin-top: 12px;
+  margin-left: 5%;
   display: block;
   font-size: 1.5em;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
   font-weight: bold;
+}
+
+.box p {
+  width: 90%;
+  margin-left: 5%;
 }
 
 .box img {
   display: flex;
   justify-content: flex-start;
-  width: 100%;
+  width: 90%;
   height: auto;
-  max-width: 100%;
   vertical-align: middle;
   margin-bottom: 30px;
   margin-top: 20px;
+  margin-left: 5%;
+  border: solid rgb(131, 106, 75);
 }
 
 
