--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,6 @@ body {
   }
   .header
   h1{
-  float: right;
   padding: 20px;
   font-size: 50px;
   height: 100px;
@@ -18,13 +17,6 @@ body {
   padding: 10px;
   color: white;
   text-align: center;
-  }
-  .header
-  img{
-  margin: 13px 20px 10px 20px;
-  border-radius: 10px;
-  height: 60px;
-  width: 60px;
   }
   
   /* NAVBAR*/
@@ -110,7 +102,6 @@ body {
   
   /*ARTICLES*/
   .flex-parent {
-  background-color:white;
   height: 110%;
   display: flex;
   align-items: center;
@@ -158,6 +149,21 @@ body {
   
   @media (max-width: 666px) {
   /*NAVBAR*/
+  
+  .header {
+    background-color: rgb(117, 159, 117);
+    }
+    .header
+    h1{
+    font-size: 40px;
+    height: 100px;
+    width: 100%;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 50px;
+    color: white;
+    text-align: center;
+    }
+
   .menu {
   display: none;
   position: absolute;
@@ -183,22 +189,23 @@ body {
   
   /*PANORAMA BIG NEWS*/
   .flex-child.panorama {
-  width: 500px;
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-  color: black;
-  text-align: center;
-  align-items: center;
-  margin: 5px;
-  border-radius: 5px;
-  }
-  .flex-child.panorama img {
-  width: 100%;
-  height:300px;
-  border-radius: 5px;
-  }
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: black;
+    text-align: center;
+    align-items: center;
+    margin: 5px;
+    border-radius: 5px;
+    }
+    
+    .flex-child.panorama img {
+    width: 100%;
+    height:300px;
+    border-radius: 5px;
+    }
   
   /*ARTICLES*/
   .flex-parent {
