--- a/style.css
+++ b/style.css
@@ -164,10 +164,10 @@ html {
       padding: 0% 10% 5% 10%;
   }
 
- .main-story{
+ main-story{
     margin: 0 0 10px 0;
-    align-self: flex-start;
-  }
+    text-align:center;
+}
   
   h1{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -177,13 +177,14 @@ html {
   button {
       height: 35px;
       display: block;
-      padding: 20px 10px;
+      padding: 5px 10px;
       background: #f17375;
       color:white;
       font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       font-size: 14px;
       border: 1px solid #f17375;
       border-radius: 5px;
+      margin: 10px 0 0 0;
   }
   
   
