--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ html {
       font-size: 14px;
       border: 1px solid #f17375;
       border-radius: 5px;
-      margin: 10px 0 0 0;
+      margin: 10px 0 10px 0;
   }
   
   
