--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ html {
     
     h4 {
       font-size: 14px;
-      margin: 0 0 4px 0;
+      margin: 10px 0 10px 0;
       color: #4d4b4b;
       border: 0 0 1px 0;
     }
