--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,122 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-color: gray;
+  margin: 0px;
+}
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: 1fr 1fr 40% 1fr 1fr;
+  background-color: rgb(0, 0, 0);
+  padding: 3px;
+  align-items: center;
+}
+
+.Sitename {
+  grid-area: 1 / 3 / 2 / 4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
+
+.Bar {
+  grid-row-start: 1;
+  grid-row-end: 2;
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: small;
+}
+
+.flex-parent {
+  padding: 25px;
+  border: 5px double black;
+  margin: 20px;
+  background-color: rgba(232, 227, 220, 0.612);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.flex-parent2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.subpost{
+  padding: 25px;
+  border: 5px double black;
+  margin: 20px;
+  background-color: rgba(255, 255, 255, 0.74);
+}
+
+.mainpost text {
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+}
+
+.bodytext {
+  display: flex;
+  justify-content: center;
+  margin-right: 100px;
+}
+.subpost {
+  margin: 20px;
+  height: auto;
+  width: 500px;
+  padding: 10px;  
+  flex-direction:row;
+}
+
+.subpost img{
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  align-items: center;
+  justify-content: center;
+}
+
+.subpost text{
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 668px) {
+
+  .flex-parent2 {
+      flex-direction: column;
+  }
+  .flex-parent {
+      flex-direction: column;
+  }
+
+}
+
+@media (min-width: 669px) and (max-width: 1024px){
+  .flex-parent2{
+      flex-direction: row;
+      flex-wrap: wrap;
+      }
+      .flex-parent{
+          flex-direction: row;
+          flex-wrap: wrap;
+          }
+  
+
+  .subpost {
+          width: 40%;  
+          height: 60%; 
+      }
+
+  .photo {
+
+      width: auto;
+      height: auto;
+      align-content: center;
+  }
 }
